@@ -3,6 +3,7 @@
 	* init-basic.el (show-trailing-whitespace): Close
 	show-trailing-whitespace, use whitespace-mode instead.
 	: whitespace-mode: don't display newline-mark.
+	(tab-width): Set default tab-width to 4.
 
 2010-05-11  Meteor Liu  <meteor1113@gmail.com>
 
